samples/_failures_safe/1761407859_efe429_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98f2cd03.c: In function ‘main’:
./samples/SAFE/__tmp_98f2cd03.c:147:13: error: expected expression at end of input
  147 |             seq_length =
      |             ^~~~~~~~~~
./samples/SAFE/__tmp_98f2cd03.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98f2cd03.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98f2cd03.c:147:13: error: expected declaration or statement at end of input
